<resources>
    <string name="app_name">Project1</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_details_to_sign_up">Enter your details to sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
</resources>