<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_details_to_sign_up"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:id="@+id/tvDetails"/>

    <EditText
        android:layout_below="@+id/tvDetails"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/first_name"
        android:textSize="20sp"
        android:id="@+id/etFirstName"/>

    <EditText
        android:layout_below="@+id/tvDetails"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/last_name"
        android:textSize="20sp"
        android:id="@+id/etLastName"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/etFirstName"
        />
    <EditText
        android:layout_below="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:id="@+id/etEmail"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        />

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        android:textSize="20sp"
        android:id="@+id/etDOB"
        android:layout_below="@id/etEmail"
        android:layout_marginStart="10dp"
        android:drawableEnd="@drawable/dob_icon"
        android:layout_marginTop="10dp"/>





</RelativeLayout>